fixed wrong variable in character.js finished unit tests for character.js (mocha needed!)

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,7 @@ privateConfig.json
 node_modules/
 package.json
 package-lock.json
+/.vs/config/applicationhost.config
+/.vs/RiftDiscordBot/v15/.suo
+/.vs/ProjectSettings.json
+/.vs
