finished addRaid and printRaids commands

--- a/src/raid/raidConfig.json
+++ b/src/raid/raidConfig.json
@@ -6,7 +6,7 @@
             "name": "Stahlbastion",
             "alias": ["bastion of steel", "stahlbastion"],
             "shortName": "bos",
-            "imgPath": "/home/rhicu/git/RiftDiscordBot/img/td.jpg",
+            "imgPath": "C:\\Git\\RiftDiscordBot\\img\\td.jpg",
             "requirements": ["800k dps an der Puppe", "2,4k Hit"],
             "numberPlayer": 10,
             "numberTank": 2,
@@ -19,7 +19,7 @@
             "name": "Aufstieg des Phönix",
             "alias": ["phönix", "aufstieg des phönix", "adp"],
             "shortName": "irotp",
-            "imgPath": "/home/rhicu/git/RiftDiscordBot/img/rotp.jpg",
+            "imgPath": "C:\\Git\\RiftDiscordBot\\img\\rotp.jpg",
             "requirements": ["500k dps an der Puppe", "2,2k Hit"],
             "numberPlayer": 10,
             "numberTank": 2,
@@ -32,7 +32,7 @@
             "name": "Tartarische Tiefen",
             "alias": ["tartarische tiefen"],
             "shortName": "td",
-            "imgPath": "/home/rhicu/git/RiftDiscordBot/img/td.jpg",
+            "imgPath": "C:\\Git\\RiftDiscordBot\\img\\td.jpg",
             "requirements": ["500k dps an der Puppe", "2,2k Hit"],
             "numberPlayer": 10,
             "numberTank": 2,
