--- a/src/raid/raidConfig.json
+++ b/src/raid/raidConfig.json
@@ -6,7 +6,7 @@
             "name": "Stahlbastion",
             "alias": ["bastion of steel", "stahlbastion"],
             "shortName": "bos",
-            "imgPath": "C:\\Git\\RiftDiscordBot\\img\\td.jpg",
+            "imgPath": "https://images.mmorpg.com/features/12143/images/Rift%201_t.jpg",
             "requirements": ["800k dps an der Puppe", "2,4k Hit"],
             "numberPlayer": 10,
             "numberTank": 2,
@@ -19,7 +19,7 @@
             "name": "Aufstieg des Phönix",
             "alias": ["phönix", "aufstieg des phönix", "adp"],
             "shortName": "irotp",
-            "imgPath": "C:\\Git\\RiftDiscordBot\\img\\rotp.jpg",
+            "imgPath": "https://www.trionworlds.com/rift/wp-content/uploads/sites/4/2017/05/rotp.jpg",
             "requirements": ["500k dps an der Puppe", "2,2k Hit"],
             "numberPlayer": 10,
             "numberTank": 2,
@@ -32,7 +32,7 @@
             "name": "Tartarische Tiefen",
             "alias": ["tartarische tiefen"],
             "shortName": "td",
-            "imgPath": "C:\\Git\\RiftDiscordBot\\img\\td.jpg",
+            "imgPath": "https://cdn3.dualshockers.com/wp-content/uploads/2017/03/ASc0ZMh.jpg",
             "requirements": ["500k dps an der Puppe", "2,2k Hit"],
             "numberPlayer": 10,
             "numberTank": 2,
