--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "src/index.js",
   "dependencies": {
     "discord.js": "^11.4.2",
-    "mysql2": "^1.6.4",
-    "sequelize": "^4.42.0"
+    "discord.js-commando": "^0.10.0",
+    "mysql2": "^1.6.5",
+    "sqlite": "^3.0.2"
   },
   "scripts": {
     "test": "jest",
-    "start": "node ./src/index.js"
+    "start": "ts-node ./src/main.ts"
   },
   "repository": {
     "type": "git",
@@ -24,7 +25,10 @@
   },
   "homepage": "https://github.com/rhicu/rift-discord-bot#readme",
   "devDependencies": {
-    "eslint": "^5.12.1",
-    "jest": "^23.6.0"
+    "eslint": "^5.15.2",
+    "eslint-config-google": "^0.12.0",
+    "jest": "^24.5.0",
+    "ts-node": "^8.0.3",
+    "typescript": "^3.4.3"
   }
 }
