--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "To run, you need to install node v 8.xx or higher.\r After it open a terminal, navigate to the bot folder and use the command \"npm init -y\" to initialize node there with default setup.\r Now you have to install the following packages:",
   "main": "src/index.js",
   "dependencies": {
-    "discord.js": "^11.4.2",
-    "discord.js-commando": "^0.10.0",
-    "mysql2": "^1.6.5",
-    "sqlite": "^3.0.2"
+    "@types/node": "^12.7.5",
+    "discord.js": "^11.5.1",
+    "mysql2": "^1.7.0",
+    "ts-node": "^8.3.0",
+    "typescript": "^3.6.3"
   },
   "scripts": {
-    "test": "jest",
+    "test": "mocha -r ts-node/register test/**/*.test.ts",
+    "coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test",
     "start": "ts-node ./src/main.ts"
   },
   "repository": {
@@ -25,10 +27,14 @@
   },
   "homepage": "https://github.com/rhicu/rift-discord-bot#readme",
   "devDependencies": {
-    "eslint": "^5.15.2",
-    "eslint-config-google": "^0.12.0",
-    "jest": "^24.5.0",
-    "ts-node": "^8.0.3",
-    "typescript": "^3.4.3"
+    "@types/chai": "^4.2.2",
+    "@types/mocha": "^5.2.7",
+    "chai": "^4.2.0",
+    "eslint": "^6.3.0",
+    "eslint-config-google": "^0.14.0",
+    "mocha": "^6.2.0",
+    "nyc": "^14.1.1",
+    "ts-mockito": "^2.5.0",
+    "tslint": "^5.20.0"
   }
 }
