--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "@types/node": "^12.7.5",
     "discord.js": "^11.5.1",
     "mysql2": "^1.7.0",
-    "ts-node": "^8.3.0",
     "typescript": "^3.6.3"
   },
   "scripts": {
-    "test": "mocha -r ts-node/register test/**/*.test.ts",
-    "coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test",
+    "test": "mocha",
+    "coverage": "nyc mocha",
     "start": "ts-node ./src/main.ts"
   },
   "repository": {
@@ -27,6 +26,7 @@
   },
   "homepage": "https://github.com/rhicu/rift-discord-bot#readme",
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^0.1.3",
     "@types/chai": "^4.2.2",
     "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
@@ -34,7 +34,9 @@
     "eslint-config-google": "^0.14.0",
     "mocha": "^6.2.0",
     "nyc": "^14.1.1",
+    "source-map-support": "^0.5.13",
     "ts-mockito": "^2.5.0",
+    "ts-node": "^8.3.0",
     "tslint": "^5.20.0"
   }
 }
