--- a/.nycrc
+++ b/.nycrc
@@ -3,7 +3,7 @@
     "all": true,
     "check-coverage": true,
     "extension": [".ts"],
-    "exclude": ["**/*.conf.ts"],
+    "exclude": ["**/*.conf.ts", "**/_list.ts"],
     "include": ["src/**/*"],
     "branches": 80,
     "lines": 80,
