--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "rift-discord-bot",
-  "version": "1.0.0",
-  "description": "To run, you need to install node v 8.xx or higher.\r After it open a terminal, navigate to the bot folder and use the command \"npm init -y\" to initialize node there with default setup.\r Now you have to install the following packages:",
+  "version": "2.0.0",
   "main": "src/index.js",
   "dependencies": {
-    "discord.js": "^12.4.1",
-    "mysql2": "^1.5.1",
-    "sequelize": "^4.28.2"
+    "discord.js": "^12.5.3",
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
+    "pino": "^6.11.2",
+    "pino-pretty": "^4.7.1",
+    "sequelize": "^6.6.2"
   },
   "scripts": {
     "test": "jest",
-    "start": "node ./src/index.js"
+    "start": "echo 'no entry point set yet'"
   },
   "repository": {
     "type": "git",
@@ -23,5 +25,22 @@
     "url": "https://github.com/rhicu/rift-discord-bot/issues"
   },
   "homepage": "https://github.com/rhicu/rift-discord-bot#readme",
-  "devDependencies": {}
+  "devDependencies": {
+    "@openapitools/openapi-generator-cli": "^2.2.5",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.37",
+    "@typescript-eslint/eslint-plugin": "^4.21.0",
+    "@typescript-eslint/parser": "^4.21.0",
+    "@zerollup/ts-transform-paths": "^1.7.18",
+    "eslint": "^7.23.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.4",
+    "ttypescript": "^1.5.12",
+    "typescript": "^4.2.4"
+  }
 }
