--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "db:stop": "docker-compose -f ops/database/docker-compose.yml down",
     "db:init": "npm run build && node ./dist/src/db/dbinit/index.js",
     "lint": "eslint .",
-    "start": "node ./dist/src/index.js",
+    "start": "node ./dist/src/main.js",
     "dev": "npm run build && npm run start"
   },
   "repository": {
