--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,6 +47,8 @@
     "baseUrl": "./",                             /* Base directory to resolve non-absolute module names. */
     "paths": {
       "@db-models": [ "src/db/models" ],
+      "@commands/*": [ "src/commands/*" ],
+      "@lib/*": [ "src/lib/*" ],
       "@src/*": [ "src/*" ]
     },                                 /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                              /* List of root folders whose combined content represents the structure of the project at runtime. */
